// Copyright (c) 2020 The Orbit Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package orbit_grpc_protos;

import "capture.proto";

// This is needed by LockFreeBufferCaptureEventProducer.
option cc_enable_arenas = true;

message ReceiveCommandsAndSendEventsRequest {
  message BufferedCaptureEvents {
    reserved 1;
    repeated ProducerCaptureEvent capture_events = 2;
  }
  message AllEventsSent {}

  oneof event {
    BufferedCaptureEvents buffered_capture_events = 1;
    AllEventsSent all_events_sent = 2;
  }
}

message ReceiveCommandsAndSendEventsResponse {
  message StartCaptureCommand {
    CaptureOptions capture_options = 1;
  }
  message StopCaptureCommand {}
  message CaptureFinishedCommand {}

  oneof command {
    StartCaptureCommand start_capture_command = 1;
    StopCaptureCommand stop_capture_command = 2;
    CaptureFinishedCommand capture_finished_command = 3;
  }
}

// This service offers a channel to send CaptureEvents
// from external producers to OrbitService.
// This is done with a single bi-directional streaming RPC
// on which CaptureEvents and AllEventsSent notifications are sent,
// and on which Start/StopCaptureCommands are received.
service ProducerSideService {
  rpc ReceiveCommandsAndSendEvents(stream ReceiveCommandsAndSendEventsRequest)
      returns (stream ReceiveCommandsAndSendEventsResponse) {}
}
