// Copyright (c) 2020 The Orbit Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package orbit_grpc_protos;

service CaptureClientGgpService {
  rpc StartCapture(StartCaptureRequest) returns (StartCaptureResponse) {}

  rpc StopCapture(StopCaptureRequest) returns (StopCaptureResponse) {}

  rpc UpdateSelectedFunctions(UpdateSelectedFunctionsRequest)
      returns (UpdateSelectedFunctionsResponse) {}

  rpc ShutdownService(ShutdownServiceRequest)
      returns (ShutdownServiceResponse) {}
}

message StartCaptureRequest {}

message StartCaptureResponse {}

message StopCaptureRequest {}

message StopCaptureResponse {}

message UpdateSelectedFunctionsRequest {
  repeated string functions = 1;
}

message UpdateSelectedFunctionsResponse {}

message ShutdownServiceRequest {}

message ShutdownServiceResponse {}
